Fixed Collapse Problem

--- a/src/Views/ElderlyInfo.scss
+++ b/src/Views/ElderlyInfo.scss
@@ -3,7 +3,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  width: 850px;
   padding: 20px;
 
   .search-container {
